# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "outbound_ez_to_ez_handler",
    srcs = ["src/outbound.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":mtls",
        ":outbound_ez_to_ez_client",
        "//enforcer/grpc_connector",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/trace_context",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:boring",
        "@crates//:log",
        "@crates//:prost",
        "@crates//:rand",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-opentelemetry",
    ],
)

rust_library(
    name = "inbound_ez_to_ez_handler",
    srcs = ["src/inbound.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":mtls",
        "//enforcer/error:ez_error",
        "//enforcer/grpc_connector",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/trace_context",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:error_detail_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:boring",
        "@crates//:futures",
        "@crates//:log",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-http",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost",
        "@crates//:rand",
        "@crates//:tokio",
        "@crates//:tokio-boring",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-opentelemetry",
    ],
)

rust_library(
    name = "outbound_ez_to_ez_client",
    srcs = ["src/outbound_ez_to_ez_client.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/v1:enforcer_rust",
        "@crates//:anyhow",
        "@crates//:dyn-clone",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "inbound_test",
    size = "small",
    srcs = ["test/inbound_test.rs"],
    deps = [
        ":inbound_ez_to_ez_handler",
        "//enforcer/error:ez_error",
        "//enforcer/grpc_connector",
        "//enforcer/isolate:isolate_info",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/junction:junction_trait",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:hyper-util",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "outbound_test",
    size = "small",
    srcs = ["test/outbound_test.rs"],
    deps = [
        ":outbound_ez_to_ez_client",
        ":outbound_ez_to_ez_handler",
        "//enforcer/isolate:isolate_info",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/metrics:metrics_test_utils",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "outbound_metrics_test",
    srcs = [
        "test/outbound_metrics_test.rs",
        "test/outbound_test.rs",
    ],
    aliases = {
        "//enforcer/ez_to_ez:outbound_ez_to_ez_client": "outbound_ez_to_ez_client",
        "//enforcer/ez_to_ez:outbound_ez_to_ez_handler": "outbound_ez_to_ez_handler",
    },
    deps = [
        ":outbound_ez_to_ez_client",
        ":outbound_ez_to_ez_handler",
        "//enforcer/metrics",
        "//enforcer/metrics:metrics_test_utils",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_library(
    name = "mtls",
    srcs = [
        "src/mtls.rs",
        "src/mtls_lib.rs",
    ],
    crate_root = "src/mtls_lib.rs",
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/grpc_connector",
        "//enforcer/v1:ez_mtls_rust",
        "//enforcer/v1:manifest_rust",
        "@crates//:anyhow",
        "@crates//:arc-swap",
        "@crates//:boring",
        "@crates//:log",
        "@crates//:sha2",
        "@crates//:tokio",
        "@crates//:tokio-boring",
        "@crates//:tonic",
        "@crates//:x509-parser",
    ],
)

rust_test(
    name = "mtls_test",
    size = "small",
    srcs = ["test/mtls_test.rs"],
    compile_data = [
        "test/testdata/leaf.der",
        "test/testdata/root.der",
    ],
    data = glob(["test/testdata/*"]),
    deps = [
        ":inbound_ez_to_ez_handler",
        ":mtls",
        ":outbound_ez_to_ez_client",
        ":outbound_ez_to_ez_handler",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/metrics:metrics_test_utils",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_mtls_rust",
        "//enforcer/v1:manifest_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-boring",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:x509-parser",
    ],
)
