# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary")

# Keep this rust_binary instead of rust_test otherwise bazel would run this as an
# independent test See: https://github.com/bazelbuild/rules_rust/discussions/913
rust_binary(
    name = "container_integration_test",
    srcs = ["container_integration_test.rs"],
    data = ["//enforcer/container/test_data:test_bundle"],
    deps = [
        "//enforcer/container",
        "//enforcer/container:container_custom",
        "@crates//:anyhow",
        "@crates//:libc",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:users",
        "@rules_rust//tools/runfiles",
    ],
)
