# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "isolate_info",
    srcs = ["src/isolate_info.rs"],
    proc_macro_deps = ["@crates//:derivative"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:once_cell",
        "@crates//:rand",
    ],
)

rust_library(
    name = "isolate_service_mapper",
    srcs = ["src/isolate_service_mapper.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":isolate_info",
        "//enforcer/v1:manifest_rust",
        "@crates//:anyhow",
        "@crates//:rand",
        "@crates//:tokio",
    ],
)

rust_library(
    name = "isolate_ez_service",
    srcs = [
        "src/isolate_ez_service.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fileshare_manager",
        ":isolate_info",
        ":isolate_service_mapper",
        ":shared_memory_manager",
        ":shm_slab_pool",
        "//enforcer/data_scope",
        "//enforcer/error:ez_error",
        "//enforcer/error:ez_error_trait",
        "//enforcer/ez_to_external:external_proxy_connector",
        "//enforcer/ez_to_ez:outbound_ez_to_ez_client",
        "//enforcer/grpc_connector",
        "//enforcer/interceptor",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/state:state_manager",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:payload_rust",
        "//simple_tonic_stream",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:futures",
        "@crates//:log",
        "@crates//:opentelemetry",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_library(
    name = "isolate_ez_service_manager",
    srcs = [
        "src/isolate_ez_service_manager.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fileshare_manager",
        ":isolate_ez_service",
        ":isolate_info",
        ":isolate_service_mapper",
        ":shared_memory_manager",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/ez_to_external:external_proxy_connector",
        "//enforcer/ez_to_ez:outbound_ez_to_ez_client",
        "//enforcer/interceptor",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/state:state_manager",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:manifest_rust",
        "@crates//:dashmap",
        "@crates//:log",
        "@crates//:opentelemetry-proto",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_library(
    name = "shm_slab_pool",
    srcs = ["src/shm_slab_pool.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:log",
        "@crates//:memmap2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-retry",
    ],
)

rust_library(
    name = "shared_memory_manager",
    srcs = ["src/shared_mem_manager.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":isolate_info",
        ":shm_slab_pool",
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/interceptor",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:rand",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_library(
    name = "fileshare_manager",
    srcs = ["src/fileshare_manager.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":isolate_info",
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/error:ez_error",
        "//enforcer/error:ez_error_trait",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:error_detail_rust",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:log",
        "@crates//:rand",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "shm_slab_pool_test",
    size = "small",
    srcs = ["test/shm_slab_pool_test.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":shm_slab_pool",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:rand",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)

rust_library(
    name = "isolate_test_utils",
    testonly = True,
    srcs = ["test_utils.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/error:ez_error",
        "//enforcer/interceptor",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:payload_rust",
        "//simple_tonic_stream",
        "@crates//:anyhow",
        "@crates//:dyn-clone",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "isolate_service_mapper_test",
    size = "small",
    srcs = ["test/isolate_service_mapper_test.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":isolate_info",
        ":isolate_service_mapper",
        "//enforcer/interceptor",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:manifest_rust",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "isolate_ez_service_test",
    size = "small",
    srcs = ["test/isolate_ez_service_test.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":fileshare_manager",
        ":isolate_ez_service",
        ":isolate_info",
        ":isolate_service_mapper",
        ":shared_memory_manager",
        ":shm_slab_pool",
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/ez_to_external:external_proxy_connector",
        "//enforcer/ez_to_ez:outbound_ez_to_ez_client",
        "//enforcer/interceptor",
        "//enforcer/isolate:isolate_test_utils",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/junction:junction_trait",
        "//enforcer/state:state_manager",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:manifest_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "isolate_ez_service_metrics_test",
    size = "small",
    srcs = ["test/isolate_ez_service_metrics_test.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":fileshare_manager",
        ":isolate_ez_service",
        ":isolate_ez_service_manager",
        ":isolate_info",
        ":isolate_service_mapper",
        ":shared_memory_manager",
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/ez_to_external:external_proxy_connector",
        "//enforcer/ez_to_ez:outbound_ez_to_ez_client",
        "//enforcer/interceptor",
        "//enforcer/isolate:isolate_test_utils",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/metrics:metrics_test_utils",
        "//enforcer/state:state_manager",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:manifest_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:env_logger",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:nix",
        "@crates//:opentelemetry-proto",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "fileshare_test",
    size = "small",
    srcs = ["test/fileshare_test.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":fileshare_manager",
        ":isolate_ez_service",
        ":isolate_info",
        ":isolate_service_mapper",
        ":shared_memory_manager",
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/ez_to_external:external_proxy_connector",
        "//enforcer/ez_to_ez:outbound_ez_to_ez_client",
        "//enforcer/interceptor",
        "//enforcer/isolate:isolate_test_utils",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/junction:junction_trait",
        "//enforcer/metrics",
        "//enforcer/metrics:metrics_test_utils",
        "//enforcer/state:state_manager",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:manifest_rust",
        "//enforcer/v1:payload_rust",
        "@crates//:anyhow",
        "@crates//:env_logger",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)
