# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "metrics",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//enforcer/grpc_connector",
        "//enforcer/logging",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_service_rust",
        "@crates//:anyhow",
        "@crates//:futures",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "metrics_test",
    size = "small",
    srcs = ["test/metrics_test.rs"],
    deps = [
        ":metrics",
        "//enforcer/v1:ez_service_rust",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:futures",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)
