# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//enforcer/metrics:test/metrics_simulator_test.bzl", "metrics_simulator_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "metrics",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//enforcer/error:ez_error",
        "//enforcer/error:ez_error_trait",
        "//enforcer/grpc_connector",
        "//enforcer/logging",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:error_detail_rust",
        "//enforcer/v1:external_proxy_rust",
        "//enforcer/v1:ez_service_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "//enforcer/v1:manifest_rust",
        "//enforcer/version",
        "@crates//:anyhow",
        "@crates//:futures",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry-proto",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_library(
    name = "metrics_test_utils",
    srcs = ["test/test_utils.rs"],
    deps = [
        ":metrics",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:opentelemetry",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "metrics_test",
    size = "small",
    srcs = ["test/metrics_test.rs"],
    deps = [
        ":metrics",
        ":metrics_test_utils",
        "//enforcer/v1:ez_service_rust",
        "//enforcer/v1:ez_to_ez_service_rust",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:futures",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry_sdk",
        "@crates//:prost",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

rust_test(
    name = "receiver_test",
    size = "small",
    srcs = ["test/isolate_metrics_receiver_test.rs"],
    deps = [
        ":metrics",
        ":metrics_test_utils",
        "//enforcer/v1:manifest_rust",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-proto",
        "@crates//:tokio",
    ],
)

rust_binary(
    name = "ez_metrics_simulator",
    srcs = ["tools/metrics_simulator.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":metrics",
        "//enforcer/container/manager:manifest_parser",
        "//enforcer/v1:manifest_rust",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:opentelemetry-proto",
        "@crates//:prost",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)

metrics_simulator_test(
    name = "simulator_integration_test",
    expected = "test_data/baseline/expected_output.json",
    input = "test_data/baseline/metrics_input.json",
    manifest = "test_data/baseline/manifest.json",
)

metrics_simulator_test(
    name = "simulator_missing_policy_test",
    expected = "test_data/missing_policy/expected_output.json",
    input = "test_data/missing_policy/metrics_input.json",
    manifest = "test_data/missing_policy/manifest.json",
)

metrics_simulator_test(
    name = "simulator_histogram_test",
    expected = "test_data/histogram/expected_output.json",
    input = "test_data/histogram/metrics_input.json",
    manifest = "test_data/histogram/manifest.json",
)
